[gd_scene load_steps=3 format=3 uid="uid://chgr6wfa8ldsh"]

[ext_resource type="Script" uid="uid://bqgbp1hgvdesl" path="res://Common/MouseClickWidgets/Scripts/widget_slider.gd" id="1_arg5j"]
[ext_resource type="PackedScene" uid="uid://wj8h4mocnpja" path="res://Common/MouseClickWidgets/_draggable.tscn" id="2_3286u"]

[node name="WidgetSlider" type="ColorRect"]
offset_right = 427.0
offset_bottom = 64.0
mouse_filter = 2
script = ExtResource("1_arg5j")

[node name="Notches" type="Node2D" parent="."]

[node name="DraggableItem" parent="." instance=ExtResource("2_3286u")]
position = Vector2(32, 32)
scale = Vector2(0.5, 0.5)

[node name="RichTextLabel" type="RichTextLabel" parent="DraggableItem"]
offset_left = -60.0
offset_top = -30.0
offset_right = 64.0
offset_bottom = 54.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 50
text = "x 0"
scroll_active = false
horizontal_alignment = 1

[connection signal="dragging" from="DraggableItem" to="." method="_on_drag"]
